Traducteur/_build/cgram.output
   0  $accept : %entry% $end

   1  identifier : IDENTIFIER
   2             | OPERATOR EQ
   3             | OPERATOR NOTEQ
   4             | OPERATOR EQUAL

   5  literal : integer_literal
   6          | character_literal
   7          | floating_literal
   8          | string_literal
   9          | boolean_literal

  10  integer_literal : INTEGER

  11  character_literal : CHARACTER

  12  floating_literal : FLOATING

  13  string_literal : STRING

  14  boolean_literal : TRUE
  15                  | FALSE

  16  translation_unit : statement_list EOF

  17  statement : directive
  18            | declaration
  19            | inline_methode

  20  statement_list :
  21                 | statement statement_list

  22  directive : SHARP IF expression
  23            | SHARP IFDEF expression
  24            | SHARP IF EXCLAMATION identifier
  25            | SHARP IFNDEF identifier
  26            | SHARP ENDIF
  27            | SHARP DEFINE identifier LPARENTHESIS param_list RPARENTHESIS expression
  28            | SHARP DEFINE identifier directive_attribute
  29            | SHARP DEFINE identifier expression_opt
  30            | SHARP INCLUDE inclusion
  31            | SHARP ELIF expression
  32            | SHARP ELSE directive
  33            | SHARP ERROR identifier identifier identifier EXCLAMATION

  34  directive_attribute : ATTRIBUTE LPARENTHESIS LPARENTHESIS expression RPARENTHESIS RPARENTHESIS

  35  inclusion : INF filename SUP
  36            | QUOTE filename QUOTE

  37  filename : identifier
  38           | identifier DOT identifier
  39           | identifier DIV filename

  40  declaration : named_enum
  41              | anonymous_enum
  42              | abstract_struct
  43              | abstract_class
  44              | concrete_class
  45              | fonction_declaration

  46  anonymous_enum : ENUM LBRACE constant_constructor_list RBRACE SEMICOLON

  47  named_enum : ENUM identifier LBRACE constant_constructor_list RBRACE SEMICOLON

  48  constant_constructor_list :
  49                            | constant_constructor
  50                            | constant_constructor COMMA constant_constructor_list

  51  constant_constructor : identifier
  52                       | identifier EQUAL integer_literal

  53  abstract_class : CLASS identifier SEMICOLON

  54  abstract_struct : STRUCT identifier SEMICOLON

  55  public_methodes : PUBLIC COLON declarations_list

  56  private_methodes :
  57                   | PRIVATE COLON declarations_list

  58  concrete_class : CLASS identifier heritage LBRACE public_methodes private_methodes RBRACE SEMICOLON

  59  heritage :
  60           | COLON heritage_list

  61  heritage_list : accessor identifier
  62                | accessor identifier COMMA heritage_list

  63  accessor : PUBLIC
  64           | PRIVATE

  65  declarations_list :
  66                    | methode declarations_list
  67                    | directive declarations_list
  68                    | attribute declarations_list

  69  attribute : var_type identifier array_size_opt SEMICOLON

  70  methode : constructor
  71          | qualifier destructor
  72          | pure_methode
  73          | qualifier pure_methode
  74          | typedef_declaration
  75          | friend_declaration

  76  qualifier : VIRTUAL
  77            | STATIC
  78            | INLINE

  79  constructor : identifier LPARENTHESIS param_list RPARENTHESIS SEMICOLON
  80              | qualifier identifier LPARENTHESIS param_list RPARENTHESIS SEMICOLON

  81  destructor : TILDE identifier LPARENTHESIS RPARENTHESIS SEMICOLON

  82  pure_methode : storage_class var_type identifier LPARENTHESIS param_list RPARENTHESIS methode_storage_class_opt SEMICOLON
  83               | var_type identifier LPARENTHESIS param_list RPARENTHESIS methode_storage_class_opt SEMICOLON

  84  typedef_declaration : TYPEDEF identifier inherited_opt SEMICOLON

  85  friend_declaration : FRIEND abstract_class
  86                     | FRIEND fonction_declaration

  87  var_type : VOID
  88           | CHAR
  89           | BOOL
  90           | FLOAT
  91           | SHORT
  92           | identifier
  93           | var_type STAR
  94           | var_type AND

  95  param_list :
  96             | param
  97             | param COMMA param_list

  98  param : storage_class_opt var_type identifier_opt default_value_opt array_size_and_opt

  99  storage_class : CONST

 100  default_value : EQUAL expression

 101  expression : identifier
 102             | literal
 103             | identifier LPARENTHESIS arguments RPARENTHESIS SEMICOLON
 104             | expression_booleenne

 105  expression_booleenne : expression EQ expression

 106  expression_list : expression
 107                  | expression expression_list

 108  arguments :
 109            | expression
 110            | expression COMMA arguments

 111  inline_methode : INLINE storage_class_opt var_type identifier COLONCOLON identifier LPARENTHESIS param_list RPARENTHESIS methode_storage_class_opt LBRACE expression_list RBRACE

 112  fonction_declaration : var_type identifier LPARENTHESIS param_list RPARENTHESIS SEMICOLON

 113  storage_class_opt :
 114                    | storage_class

 115  default_value_opt :
 116                    | default_value

 117  expression_opt :
 118                 | expression

 119  methode_storage_class_opt :
 120                            | CONST

 121  identifier_opt :
 122                 | identifier

 123  inherited_opt :
 124                | INHERITED

 125  array_size_and_opt :
 126                     | LBRACKET INTEGER RBRACKET

 127  array_size_opt :
 128                 | LBRACKET INTEGER RBRACKET

 129  %entry% : '\001' translation_unit

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . translation_unit  (129)
	statement_list : .  (20)

	IDENTIFIER  shift 3
	SHARP  shift 4
	BOOL  shift 5
	CHAR  shift 6
	CLASS  shift 7
	ENUM  shift 8
	FLOAT  shift 9
	INLINE  shift 10
	OPERATOR  shift 11
	SHORT  shift 12
	STRUCT  shift 13
	VOID  shift 14
	EOF  reduce 20

	translation_unit  goto 15
	identifier  goto 16
	statement_list  goto 17
	statement  goto 18
	directive  goto 19
	declaration  goto 20
	inline_methode  goto 21
	named_enum  goto 22
	anonymous_enum  goto 23
	abstract_struct  goto 24
	abstract_class  goto 25
	concrete_class  goto 26
	fonction_declaration  goto 27
	var_type  goto 28


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	identifier : IDENTIFIER .  (1)

	.  reduce 1


state 4
	directive : SHARP . IF expression  (22)
	directive : SHARP . IFDEF expression  (23)
	directive : SHARP . IF EXCLAMATION identifier  (24)
	directive : SHARP . IFNDEF identifier  (25)
	directive : SHARP . ENDIF  (26)
	directive : SHARP . DEFINE identifier LPARENTHESIS param_list RPARENTHESIS expression  (27)
	directive : SHARP . DEFINE identifier directive_attribute  (28)
	directive : SHARP . DEFINE identifier expression_opt  (29)
	directive : SHARP . INCLUDE inclusion  (30)
	directive : SHARP . ELIF expression  (31)
	directive : SHARP . ELSE directive  (32)
	directive : SHARP . ERROR identifier identifier identifier EXCLAMATION  (33)

	ELSE  shift 29
	IF  shift 30
	IFNDEF  shift 31
	DEFINE  shift 32
	INCLUDE  shift 33
	IFDEF  shift 34
	ELIF  shift 35
	ENDIF  shift 36
	ERROR  shift 37
	.  error


state 5
	var_type : BOOL .  (89)

	.  reduce 89


state 6
	var_type : CHAR .  (88)

	.  reduce 88


state 7
	abstract_class : CLASS . identifier SEMICOLON  (53)
	concrete_class : CLASS . identifier heritage LBRACE public_methodes private_methodes RBRACE SEMICOLON  (58)

	IDENTIFIER  shift 3
	OPERATOR  shift 11
	.  error

	identifier  goto 38


state 8
	anonymous_enum : ENUM . LBRACE constant_constructor_list RBRACE SEMICOLON  (46)
	named_enum : ENUM . identifier LBRACE constant_constructor_list RBRACE SEMICOLON  (47)

	IDENTIFIER  shift 3
	LBRACE  shift 39
	OPERATOR  shift 11
	.  error

	identifier  goto 40


state 9
	var_type : FLOAT .  (90)

	.  reduce 90


state 10
	inline_methode : INLINE . storage_class_opt var_type identifier COLONCOLON identifier LPARENTHESIS param_list RPARENTHESIS methode_storage_class_opt LBRACE expression_list RBRACE  (111)
	storage_class_opt : .  (113)

	CONST  shift 41
	IDENTIFIER  reduce 113
	BOOL  reduce 113
	CHAR  reduce 113
	FLOAT  reduce 113
	OPERATOR  reduce 113
	SHORT  reduce 113
	VOID  reduce 113

	storage_class  goto 42
	storage_class_opt  goto 43


state 11
	identifier : OPERATOR . EQ  (2)
	identifier : OPERATOR . NOTEQ  (3)
	identifier : OPERATOR . EQUAL  (4)

	EQ  shift 44
	NOTEQ  shift 45
	EQUAL  shift 46
	.  error


state 12
	var_type : SHORT .  (91)

	.  reduce 91


state 13
	abstract_struct : STRUCT . identifier SEMICOLON  (54)

	IDENTIFIER  shift 3
	OPERATOR  shift 11
	.  error

	identifier  goto 47


state 14
	var_type : VOID .  (87)

	.  reduce 87


state 15
	%entry% : '\001' translation_unit .  (129)

	.  reduce 129


state 16
	var_type : identifier .  (92)

	.  reduce 92


state 17
	translation_unit : statement_list . EOF  (16)

	EOF  shift 48
	.  error


state 18
	statement_list : statement . statement_list  (21)
	statement_list : .  (20)

	IDENTIFIER  shift 3
	SHARP  shift 4
	BOOL  shift 5
	CHAR  shift 6
	CLASS  shift 7
	ENUM  shift 8
	FLOAT  shift 9
	INLINE  shift 10
	OPERATOR  shift 11
	SHORT  shift 12
	STRUCT  shift 13
	VOID  shift 14
	EOF  reduce 20

	identifier  goto 16
	statement_list  goto 49
	statement  goto 18
	directive  goto 19
	declaration  goto 20
	inline_methode  goto 21
	named_enum  goto 22
	anonymous_enum  goto 23
	abstract_struct  goto 24
	abstract_class  goto 25
	concrete_class  goto 26
	fonction_declaration  goto 27
	var_type  goto 28


state 19
	statement : directive .  (17)

	.  reduce 17


state 20
	statement : declaration .  (18)

	.  reduce 18


state 21
	statement : inline_methode .  (19)

	.  reduce 19


state 22
	declaration : named_enum .  (40)

	.  reduce 40


state 23
	declaration : anonymous_enum .  (41)

	.  reduce 41


state 24
	declaration : abstract_struct .  (42)

	.  reduce 42


state 25
	declaration : abstract_class .  (43)

	.  reduce 43


state 26
	declaration : concrete_class .  (44)

	.  reduce 44


state 27
	declaration : fonction_declaration .  (45)

	.  reduce 45


state 28
	var_type : var_type . STAR  (93)
	var_type : var_type . AND  (94)
	fonction_declaration : var_type . identifier LPARENTHESIS param_list RPARENTHESIS SEMICOLON  (112)

	IDENTIFIER  shift 3
	STAR  shift 50
	AND  shift 51
	OPERATOR  shift 11
	.  error

	identifier  goto 52


state 29
	directive : SHARP ELSE . directive  (32)

	SHARP  shift 4
	.  error

	directive  goto 53


state 30
	directive : SHARP IF . expression  (22)
	directive : SHARP IF . EXCLAMATION identifier  (24)

	IDENTIFIER  shift 3
	INTEGER  shift 54
	FLOATING  shift 55
	CHARACTER  shift 56
	STRING  shift 57
	EXCLAMATION  shift 58
	FALSE  shift 59
	OPERATOR  shift 11
	TRUE  shift 60
	.  error

	identifier  goto 61
	literal  goto 62
	integer_literal  goto 63
	character_literal  goto 64
	floating_literal  goto 65
	string_literal  goto 66
	boolean_literal  goto 67
	expression  goto 68
	expression_booleenne  goto 69


state 31
	directive : SHARP IFNDEF . identifier  (25)

	IDENTIFIER  shift 3
	OPERATOR  shift 11
	.  error

	identifier  goto 70


state 32
	directive : SHARP DEFINE . identifier LPARENTHESIS param_list RPARENTHESIS expression  (27)
	directive : SHARP DEFINE . identifier directive_attribute  (28)
	directive : SHARP DEFINE . identifier expression_opt  (29)

	IDENTIFIER  shift 3
	OPERATOR  shift 11
	.  error

	identifier  goto 71


state 33
	directive : SHARP INCLUDE . inclusion  (30)

	QUOTE  shift 72
	INF  shift 73
	.  error

	inclusion  goto 74


state 34
	directive : SHARP IFDEF . expression  (23)

	IDENTIFIER  shift 3
	INTEGER  shift 54
	FLOATING  shift 55
	CHARACTER  shift 56
	STRING  shift 57
	FALSE  shift 59
	OPERATOR  shift 11
	TRUE  shift 60
	.  error

	identifier  goto 61
	literal  goto 62
	integer_literal  goto 63
	character_literal  goto 64
	floating_literal  goto 65
	string_literal  goto 66
	boolean_literal  goto 67
	expression  goto 75
	expression_booleenne  goto 69


state 35
	directive : SHARP ELIF . expression  (31)

	IDENTIFIER  shift 3
	INTEGER  shift 54
	FLOATING  shift 55
	CHARACTER  shift 56
	STRING  shift 57
	FALSE  shift 59
	OPERATOR  shift 11
	TRUE  shift 60
	.  error

	identifier  goto 61
	literal  goto 62
	integer_literal  goto 63
	character_literal  goto 64
	floating_literal  goto 65
	string_literal  goto 66
	boolean_literal  goto 67
	expression  goto 76
	expression_booleenne  goto 69


state 36
	directive : SHARP ENDIF .  (26)

	.  reduce 26


state 37
	directive : SHARP ERROR . identifier identifier identifier EXCLAMATION  (33)

	IDENTIFIER  shift 3
	OPERATOR  shift 11
	.  error

	identifier  goto 77


state 38
	abstract_class : CLASS identifier . SEMICOLON  (53)
	concrete_class : CLASS identifier . heritage LBRACE public_methodes private_methodes RBRACE SEMICOLON  (58)
	heritage : .  (59)

	SEMICOLON  shift 78
	COLON  shift 79
	LBRACE  reduce 59

	heritage  goto 80


state 39
	anonymous_enum : ENUM LBRACE . constant_constructor_list RBRACE SEMICOLON  (46)
	constant_constructor_list : .  (48)

	IDENTIFIER  shift 3
	OPERATOR  shift 11
	RBRACE  reduce 48

	identifier  goto 81
	constant_constructor_list  goto 82
	constant_constructor  goto 83


state 40
	named_enum : ENUM identifier . LBRACE constant_constructor_list RBRACE SEMICOLON  (47)

	LBRACE  shift 84
	.  error


state 41
	storage_class : CONST .  (99)

	.  reduce 99


state 42
	storage_class_opt : storage_class .  (114)

	.  reduce 114


state 43
	inline_methode : INLINE storage_class_opt . var_type identifier COLONCOLON identifier LPARENTHESIS param_list RPARENTHESIS methode_storage_class_opt LBRACE expression_list RBRACE  (111)

	IDENTIFIER  shift 3
	BOOL  shift 5
	CHAR  shift 6
	FLOAT  shift 9
	OPERATOR  shift 11
	SHORT  shift 12
	VOID  shift 14
	.  error

	identifier  goto 16
	var_type  goto 85


state 44
	identifier : OPERATOR EQ .  (2)

	.  reduce 2


state 45
	identifier : OPERATOR NOTEQ .  (3)

	.  reduce 3


state 46
	identifier : OPERATOR EQUAL .  (4)

	.  reduce 4


state 47
	abstract_struct : STRUCT identifier . SEMICOLON  (54)

	SEMICOLON  shift 86
	.  error


state 48
	translation_unit : statement_list EOF .  (16)

	.  reduce 16


state 49
	statement_list : statement statement_list .  (21)

	.  reduce 21


state 50
	var_type : var_type STAR .  (93)

	.  reduce 93


state 51
	var_type : var_type AND .  (94)

	.  reduce 94


state 52
	fonction_declaration : var_type identifier . LPARENTHESIS param_list RPARENTHESIS SEMICOLON  (112)

	LPARENTHESIS  shift 87
	.  error


state 53
	directive : SHARP ELSE directive .  (32)

	.  reduce 32


state 54
	integer_literal : INTEGER .  (10)

	.  reduce 10


state 55
	floating_literal : FLOATING .  (12)

	.  reduce 12


state 56
	character_literal : CHARACTER .  (11)

	.  reduce 11


state 57
	string_literal : STRING .  (13)

	.  reduce 13


state 58
	directive : SHARP IF EXCLAMATION . identifier  (24)

	IDENTIFIER  shift 3
	OPERATOR  shift 11
	.  error

	identifier  goto 88


state 59
	boolean_literal : FALSE .  (15)

	.  reduce 15

